--- a/demo.html
+++ b/demo.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fast Alert Demo</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+    />
     <link rel="stylesheet" href="./fastalert.min.css" />
   </head>
   <body>
@@ -28,7 +32,8 @@
           type: "success",
           title: "Deneme",
           desc: "Lorem ipsum dolar sit amet",
-          time: 3000,
+          time: 5,
+          closeBtn: true,
         });
       };
       buttons.info.onclick = function () {
@@ -36,7 +41,8 @@
           type: "info",
           title: "Deneme",
           desc: "Lorem ipsum dolar sit amet",
-          time: 3000,
+          time: 5,
+          closeBtn: true,
         });
       };
       buttons.warning.onclick = function () {
@@ -44,7 +50,8 @@
           type: "warning",
           title: "Deneme",
           desc: "Lorem ipsum dolar sit amet",
-          time: 3000,
+          time: 5,
+          closeBtn: true,
         });
       };
       buttons.danger.onclick = function () {
@@ -52,7 +59,8 @@
           type: "danger",
           title: "Deneme",
           desc: "Lorem ipsum dolar sit amet",
-          time: 3000,
+          time: 5,
+          closeBtn: true,
         });
       };
     </script>
